--- a/blog-server/Cargo.toml
+++ b/blog-server/Cargo.toml
@@ -26,7 +26,7 @@ serde_json.workspace = true
 thiserror.workspace = true
 tokio.workspace = true
 tonic.workspace = true
+tonic-prost.workspace = true
 
 [build-dependencies]
-#tonic-build = "0.14"
 tonic-prost-build = "0.14"
