--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [workspace]
-members = ["blog-cli", "blog-client", "blog-server", "blog-wasm"]
+members = ["blog-cli", "blog-client", "blog-server", "blog-wasm", "proto-crate"]
 resolver = "2"
 
 [workspace.dependencies]
@@ -15,3 +15,14 @@ tonic = "0.14"
 tonic-prost = "0.14"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
+
+[workspace.lints.rust]
+deprecated = "warn"
+missing_debug_implementations = "warn"
+missing_docs = "warn"
+nonstandard_style = "warn"
+redundant_lifetimes = "warn"
+unreachable_pub = "warn"
+unsafe_code = "warn"
+unused_crate_dependencies = "warn"
+unused_must_use = "warn"
