--- a/blog-client/Cargo.toml
+++ b/blog-client/Cargo.toml
@@ -2,13 +2,9 @@
 name = "blog-client"
 version = "0.1.0"
 edition = "2024"
-build = "build.rs"
 rust-version = "1.90"
 
-[dependencies]
-prost.workspace = true
-tokio.workspace = true
-tonic.workspace = true
+[lints]
+workspace = true
 
-[build-dependencies]
-tonic-prost-build = "0.14"
+[dependencies]
