--- a/blog-server/Cargo.toml
+++ b/blog-server/Cargo.toml
@@ -8,10 +8,11 @@ rust-version = "1.90"
 workspace = true
 
 [dependencies]
-#actix-web-httpauth = "0.8"
+actix-web-httpauth = "0.8"
 actix-cors = "0.7"
 argon2 = { version = "0.5", features = ["std"] }
 jsonwebtoken = { version = "10", features = ["aws_lc_rs"] }
+regex = "1"
 sqlx = { version = "0.8", features = ["postgres", "uuid", "runtime-tokio-rustls", "chrono"] }
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "chrono"] }
