--- a/blog-client/Cargo.toml
+++ b/blog-client/Cargo.toml
@@ -8,3 +8,14 @@ rust-version = "1.90"
 workspace = true
 
 [dependencies]
+reqwest = { version = "0.13", features = ["json"] }
+
+proto-crate = {path = "../proto-crate"}
+
+anyhow.workspace = true
+chrono.workspace = true
+serde.workspace = true
+serde_json.workspace = true
+tokio.workspace = true
+tonic = "0.14"
+thiserror.workspace = true
