--- a/blog-client/Cargo.toml
+++ b/blog-client/Cargo.toml
@@ -10,12 +10,12 @@ workspace = true
 [dependencies]
 reqwest = { version = "0.13", features = ["json"] }
 
-proto-crate = {path = "../proto-crate"}
+proto-crate = { path = "../proto-crate" }
 
 anyhow.workspace = true
 chrono.workspace = true
 serde.workspace = true
 serde_json.workspace = true
 tokio.workspace = true
-tonic = "0.14"
+tonic.workspace = true
 thiserror.workspace = true
