--- a/proto-crate/Cargo.toml
+++ b/proto-crate/Cargo.toml
@@ -7,6 +7,7 @@ build = "build.rs"
 [dependencies]
 prost.workspace = true
 #prost-types.workspace = true
+serde.workspace = true
 tonic.workspace = true
 tonic-prost.workspace = true
 
