--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,7 @@ dotenvy = "0.15"
 prost = "0.14"
 prost-types = "0.14"
 thiserror = "2"
-tokio = { version = "1", features = ["rt-multi-thread"] }
+tokio = { version = "1", features = ["rt-multi-thread", "fs"] }
 tonic = "0.14"
 tonic-prost = "0.14"
 serde = { version = "1", features = ["derive"] }
