Завершены все работы по ТЗ. Остались финальные проверки под первое ревью и доработка README.

--- a/.gitignore
+++ b/.gitignore
@@ -8,9 +8,15 @@ Cargo.lock
 
 # RustRover
 /.idea
+/.tech
 
 # Apps
 /logs/
 
 # Database
 .sqlx/
+
+# WASM
+/blog-wasm/dist/
+/blog-wasm/pkg/
+/.web_env
